# c64SIDkit

./: .gitignore  LICENSE  README.md  SFX_CHANGES.md  play_patches.sh  pyproject.toml  sfx_mapping.md  sfx_studio.sh
patches/: blaster_bolt.json  fire.json  fire_original.json  heavy_repeater_filtered.json  heavy_repeater_octdown.json  ion_cannon.json  ion_cannon_filtered.json  ion_cannon_octdown.json  powerup.json  powerup_shield.json  powerup_shield_boost.json  powerup_speed.json  powerup_speed_boost.json  powerup_spread.json  powerup_spread_boost.json  shield_off_v2.json  shield_on_v3.json  speed_boost_v2.json  spread_fire_v3.json  tie_cannon_filtered.json  tie_cannon_octdown.json  turbolaser_filtered.json  turbolaser_octdown.json  xwing_blaster_filtered.json  xwing_blaster_octdown.json
reference/: ref_bounce.json  ref_death_noise.json  ref_death_rumble.json  ref_enemy_hit.json  ref_explode_noise.json  ref_explode_rumble.json  ref_fanfare_pulse.json  ref_fanfare_saw.json  ref_fanfare_triangle.json  ref_gameover.json  ref_heavy_repeater.json  ref_ion_cannon.json  ref_kraft_alarm_high.json  ref_kraft_alarm_low.json  ref_kraft_alarm_mid.json  ref_march.json  ref_player_hit.json  ref_portal_ping.json  ref_powerup_shield.json  ref_powerup_speed.json  ref_powerup_spread.json  ref_sector_jingle.json  ref_shield_on.json  ref_tie_cannon.json  ref_turbolaser.json  ref_warp_sawtooth.json  ref_warp_triangle.json  ref_weakpoint_hit.json  ref_xwing_blaster.json
sid_sfx/: __init__.py  asm_export.py  cli.py  presets.py  resid_emulator.py  schema.py  sid_emulator.py  spectral_diff.py  (+2 more)
(+15 files in other folders)
